Add standby compression start delay
